--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "harves/nbcb_openpay",
-    "description": "php",
+    "description": "宁波银行易收宝商户对接指南",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -10,8 +10,12 @@
         }
     ],
     "minimum-stability": "dev",
+    "version": "0.0.1",
     "require": {
-        "php": ">=5.6"
+        "php": ">=7.0",
+        "ext-openssl": "*",
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "autoload": {
     	"psr-4": {
